# pacs-ext-server

./: .cursorrules  .gitignore  CHANGELOG.md  claude.md  notion-setup-guide.md  terraform-autoscaling-guide.md  terraform-aws-provider-guide.md  terraform-core-concepts.md  terraform-docker-compose-analysis.md  terraform-docker-network-guide.md  terraform-eks-cluster-guide.md  terraform-environment-management.md  terraform-postgresql-setup.md  terraform-s3-bucket-guide.md
basic-pacs-server/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example
basic-pacs-server/config/: default.toml  development.toml  production.toml
basic-pacs-server/src/: lib.rs  main.rs
basic-pacs-server/tests/: integration_tests.rs
health-check-skeleton-server/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example
health-check-skeleton-server/config/: default.toml  development.toml  production.toml
health-check-skeleton-server/src/: lib.rs  main.rs
pacs-server/: .dockerignore  .env.example  ANNOTATION_API_GUIDE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile___bak  README.md  TECHNICAL_DOCUMENTATION_TODO.md  db-tunnel.sh  docker-compose.yaml  env.development  env.production  env.test  makefile  nginx.conf  quick_restart.sh  restart_server.sh  test_keycloak.sh  test_mask_api.py  test_mask_group_api.py  test_mask_upload_workflow.py  test_object_storage.rs  test_server.py
pacs-server/.sqlx/: query-1cf92b3dce6549f0a02f0ccb0aa10d555da21fe2b45ad880bf0cf7cccf229250.json  query-2142df29f65f363cca815c3b4e52b44d232344213ffa16da9feb26b044a9c6bd.json  query-22828bba083257e921e73d99bb420e450ae41dae3bc544ca2f1bda2ed09ec505.json  query-2bdefe0858ca5e943dfe609b691dabc1d7f53d3c8d9b0c8c0e7893f24af4b22f.json  query-440b23f67341b05b99fcfc6231f17bf34a4fcb72b37c77a7a2a7829ac15f41ec.json  query-694212b5c2cbc037be4b7b3546106463381631ff24211f570432aae1aef01900.json  query-7479b057ca5acf18215c13b0ce4b10b2b4a7724f6ad2ee702720f75fcf3c266b.json  query-74feb65f9acac7e344857fc11056ba57d7300902835b92d883c6c3c96b545785.json  query-786b6826bf299feefedb884a7f53ca415163dc8598b915159cc4e1f51e6fa1bc.json  query-7b30e2eb0eadbf834e81ef0e51e20c50827c8bd62cde20618a1193c00fd08d1d.json  query-7c2ce89a540b71118cf298919b5d2b743aa7623dfbc9078ee6a63a455ce96d94.json  query-820b2136777520a9760dfac827b98c566db81474910830119c8c61bb82e1bfb4.json  query-ba6f4ba04136e4def1c19975140e6818314eb45f4a245e3a20115a734b02e7e1.json  query-be3ceb22652e0cca24b3335561a267e45c833af105e7cefb5917816215375529.json  query-cfa8a2a5938f373e9dd73723494e88079b3b01d833119c4aefae2c0ad890ab7e.json  query-d9294b18d29fdff0bd70b999b30090886f0b3ded8fe6cd6d445124803833509a.json  query-fd4883828397e8fb01767253e22fda00a95db3bb1c7fbc4a739301e1543f49b8.json
pacs-server/config/: default.toml  development.toml  production.toml
pacs-server/docs/: DATABASE_TUNNEL_SETUP.md  README.md  RUST_VERSION_COMPATIBILITY.md  TROUBLESHOOTING.md  VIEWER_SOFTWARE_FILTERING.md  mask-group-api.md  project-user-matrix-api.md  s3-signed-url-fix.md
pacs-server/migrations/: 001_initial_schema.sql  002_initial_seed_data.sql  003_add_mask_tables.sql  004_add_updated_at_columns.sql  004_add_viewer_software.sql  005_add_measurement_values.sql  006_add_user_profile_fields.sql  007_add_role_to_user_project.sql  008_add_project_status.sql  009_add_permission_category.sql  010_add_permission_category_field.sql  010_add_user_account_status_and_audit_log.sql  011_add_capability_abstraction.sql  011_add_user_account_status_and_audit_log.sql  012_seed_capabilities.sql  013_cleanup_initial_data.sql  014_add_capability_ui_labels.sql  014_extend_project_fields.sql  015_add_user_project_composite_index.sql  016_create_project_data_tables.sql  017_dicom_rbac_gateway.sql  018_core_indices.sql  019_study_detach_project.sql  020_refactor_project_data_hierarchy.sql  COMPLETE_VERIFICATION_REPORT.md  FIELD_VALIDATION.md  FINAL_VERIFICATION.md  MIGRATION_CHECKLIST.md  README.md  ULTIMATE_FINAL_CHECK.md
pacs-server/scripts/: bench_indexes.sh  docker-build.sh  docker-compose-down.sh  docker-compose-up.sh  docker-test.sh  e2e_gateway_test.py  explain.sh  linux-build-test.sh  package-for-linux.sh  setup_test_data.py  simple_mask_test.py  simple_matrix_test.sh  test_gateway_basic.sh  test_gateway_rbac.sh  test_integration.sh  test_mask_upload.py  test_matrix_api.sh  test_mock_integration.sh
pacs-server/src/: lib.rs  main.rs
pacs-server/tests/: TODO_FIX_TESTS.md  access_control_controller_test.rs.disabled  (+112 more)
(+464 files in other folders)
