[package]
name = "basic-pacs-server"
version = "0.1.0"
edition = "2021"
authors = ["PACS Team <pacs@example.com>"]
description = "Basic PACS Server with Health Check - Clean Architecture Example"
license = "MIT"
repository = "https://github.com/pacs-team/basic-pacs-server"

[dependencies]
# 웹 프레임워크
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }

# JSON 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 환경 변수
dotenvy = "0.15"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 시간 처리
chrono = { version = "0.4", features = ["serde"] }

# 에러 처리
thiserror = "1.0"

# OpenAPI 문서화
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

# 설정 관리
config = "0.13"

[dev-dependencies]
# 테스트용 HTTP 클라이언트
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
