[package]
name = "health-check-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Minimal health check server with Clean Architecture"
license = "MIT"
repository = "https://github.com/your-username/health-check-server"

[dependencies]
# 웹 프레임워크 - Rust 1.75 호환 버전
actix-web = "0.0.0-68"
# actix-cors = "0.6"  # Rust 1.75 호환성 문제로 임시 비활성화

# 비동기 런타임
tokio = { version = "1.35", features = ["full"] }

# 설정 관리 - Rust 1.75 호환 버전 (간단한 설정 사용)
# config = "0.13"
dotenvy = "0.15"

# JSON 처리
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 에러 처리
thiserror = "1.0"

# 로깅 - Rust 1.75 호환 버전 (간단한 로깅 사용)
# tracing = "0.1"
# tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# 시간 처리 - Rust 1.75 호환 버전 (간단한 시간 처리 사용)
# chrono = { version = "0.4.30", features = ["serde"] }

# OpenAPI 문서화 (선택사항) - Rust 1.75 호환 버전
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

[dev-dependencies]
# 테스트용 HTTP 클라이언트
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
