[package]
name = "pacs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
config = "0.14"
async-trait = "0.1"
jsonwebtoken = "9.2"
base64 = "0.21"
actix-web = "4.9"
actix-rt = "2.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
actix-http = "3"
