[package]
name = "pacs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
config = "0.14"
async-trait = "0.1"
jsonwebtoken = "8.3"
# base64 = "0.13"  # edition2024 문제로 임시 제거
actix-web = "4.9"
actix-cors = "0.7"
actix-rt = "2.10"
futures = "0.3.31"
redis = "0.32.7"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
actix-http = "3"
mockito = "1.4"
